[tool.poetry]
name = "server-manager"
version = "1.0.0"
description = "Web based server manager"
authors = ["Krzysztof Wiśniewski <argmaster.world@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,!=3.9.7,"
numpy = [
    { version = "^1.24.4", markers = "python_version >= '3.8' and python_version <= '3.11'" },
    { version = "^1.26.1", markers = "python_version >= '3.12' and python_version < '3.13'" },
]
matplotlib = "^3.7.5"
streamlit = "^1.37.1"
setuptools = "^72.1.0"
pydantic = "^2.8.2"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
